fixing overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@
   }
 }
 
+html, body{
+  overflow-x: hidden !important;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
